[project]
name = 'ir_transport'
authors = [
    { name='Zachary Montague', email='zacander.mon@gmail.com'},
]
description = 'IRTransport is a software developed to compare TCR and BCR repertoires as well as general amino acid sequence datasets nonparametrically using optimal transport.'
readme = "README.md"
requires-python= ">=3.9"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Healthcare Industry',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Scientific/Engineering :: Medical Science Apps.',
    'Natural Language :: English',
]

dependencies = [
    'numpy >= 1.24.4',
    'polars >= 1.6.0',
    'pot >= 0.9.4',
    'tcrdist_rs >= 0.1.10',
]

dynamic = ['version']
